Add persistent drawstack support in sample app

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,14 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    tools:keep="@layout/activity_main">
 
     <de.beatbrot.imagepainter.view.ImagePainterView
         android:id="@+id/imagePainter"
         android:layout_width="400dp"
         android:layout_height="400dp"
-        android:background="@android:color/holo_red_dark"
-        android:src="@drawable/ic_green_rect"
+        android:src="@mipmap/ic_launcher"
         app:layout_constraintBottom_toTopOf="@+id/seekBar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
